Added most of the necessary features, finalized the design

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <button class="operation" data-operation="+">+</button>
                     </div>
                     <div class="row">
-                        <button class="sign">+/-</button>
+                        <button class="negate">+/-</button>
                         <button class="number" data-value="0">0</button>
                         <button class="decimal">.</button>
-                        <button class="operation" data-operation="=">=</button>
+                        <button class="equal">=</button>
                     </div>
                 </div>
             </div>
