Finished implementing all of the necessary features

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="calculator-body">
             <div class="container">
                 <div class="display">
-                    <div class="last-operation">123</div>
-                    <div class="current-input">0</div>
+                    <p class="last-operation">123</p>
+                    <p class="current-input">0</p>
                 </div>
 
                 <div class="buttons">
